tools/tests/errors/surf_name_01.ki
# name resolution: reference an undefined variable
discard total
